--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E011'
 - !lcsh 'Tukuarika Indians'
+- GITenberg
 title: The Sheep Eaters
 url: http://www.gutenberg.org/ebooks/26565
